--- a/#source/scss/exercices.scss
+++ b/#source/scss/exercices.scss
@@ -147,9 +147,13 @@
                         flex-direction: column;
                     }
                     .item__image{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
                         img{
-                        width: 100%;
-                        height: auto;
+                            max-width: 100%;
+
+                            max-height: 250px;
                         }
                     }
 
