--- a/#source/scss/pitanie.scss
+++ b/#source/scss/pitanie.scss
@@ -9,7 +9,7 @@
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
 .section-main{
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(https://img5.goodfon.com/original/1920x1080/0/7b/osen-urozhai-tykva-natiurmort-ovoshchi-autumn-still-life-p-1.jpg) center no-repeat;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/img/pitanie/pitanie-bg-7.jpg) center no-repeat;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -94,7 +94,7 @@
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------steps */
 .section-steps{
-    
+    padding-bottom: 150px;
 
     .section-steps__main-title{
         h4{
