--- a/css/pitanie.css
+++ b/css/pitanie.css
@@ -918,8 +918,8 @@ footer.site-footer .social-icons a.dribbble:hover {
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
 .section-main {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(https://img5.goodfon.com/original/1920x1080/0/7b/osen-urozhai-tykva-natiurmort-ovoshchi-autumn-still-life-p-1.jpg) center no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://img5.goodfon.com/original/1920x1080/0/7b/osen-urozhai-tykva-natiurmort-ovoshchi-autumn-still-life-p-1.jpg) center no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(/img/pitanie/pitanie-bg-7.jpg) center no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/img/pitanie/pitanie-bg-7.jpg) center no-repeat;
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1000,6 +1000,9 @@ footer.site-footer .social-icons a.dribbble:hover {
 
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------steps */
+.section-steps {
+  padding-bottom: 150px;
+}
 .section-steps .section-steps__main-title h4 {
   margin: 10px 0 20px;
   font-size: 3rem;
