--- a/css/trens.css
+++ b/css/trens.css
@@ -917,345 +917,155 @@ footer.site-footer .social-icons a.dribbble:hover {
 }
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
-.section-header {
-  z-index: 1;
-}
-
 .section-main {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.5))), url(../img/exercices/main-bg.jpg) center no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url(../img/exercices/main-bg.jpg) center no-repeat;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(/img/trens/trens-bg.jpg) center no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/img/trens/trens-bg.jpg) center no-repeat;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-size: cover;
-  min-height: 100vh;
-}
-.section-main .section-inner {
+  height: 100vh;
+  min-height: 800px;
+  padding-top: 200px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  align-items: center;
 }
-.section-main .section-main__text {
+.section-main__title {
   font-size: 80px;
   font-weight: 700;
-  text-transform: uppercase;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 50px;
-  margin-bottom: 80px;
+  margin-bottom: 50px;
+  text-align: center;
 }
-.section-main .section-main__text span:nth-child(2) {
-  color: #d81c2b;
+.section-main__text {
+  font-size: 30px;
+  margin-bottom: 50px;
 }
 
 /* ------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------exercices */
-.section-exercices {
-  padding: 80px 10px;
-  background-color: #080808;
-  background-image: url(../img/exercices/main-bg.png);
-}
-.section-exercices__title {
-  font-size: 60px;
-  margin-bottom: 80px;
-  text-align: center;
-  text-transform: uppercase;
-}
-.section-exercices__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-.section-exercices__list .list__group {
-  position: relative;
-  margin-bottom: 25px;
-}
-.section-exercices__list .list__group .group__item__button {
-  padding: 0;
-  border: none;
-  font: inherit;
-  color: inherit;
-  background-color: transparent;
-  width: 100%;
-  cursor: pointer;
-}
-.section-exercices__list .list__group .group__item {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 200px;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
-  background-repeat: no-repeat;
-  background-position: center center;
-  border-radius: 30px;
-  -webkit-box-shadow: 10px 5px 5px black;
-          box-shadow: 10px 5px 5px black;
-}
-.section-exercices__list .list__group .group__item h2 {
-  font-size: 70px;
-  text-transform: uppercase;
-}
-.section-exercices__list .list__group .group__item:hover {
-  -webkit-filter: none;
-          filter: none;
-}
-.section-exercices__list .list__group .group__item.active {
-  -webkit-filter: none;
-          filter: none;
-}
-.section-exercices__list .list__group .group__item-1 {
-  background-image: url(../img/exercices/chest-bg.jpg);
-  background-position: center -342px;
-}
-.section-exercices__list .list__group .group__item-2 {
-  background-image: url(../img/exercices/back-bg.jpeg);
-  background-size: 100%;
-  background-position: center 70%;
-}
-.section-exercices__list .list__group .group__item-3 {
-  background-image: url(../img/exercices/shoulders-bg.jpeg);
-  background-position: center 40%;
-  background-size: 100%;
-}
-.section-exercices__list .list__group .group__item-4 {
-  background-image: url(../img/exercices/biceps-bg.jpg);
-  background-size: 100%;
-}
-.section-exercices__list .list__group .group__item-5 {
-  background-image: url(../img/exercices/triceps-bg.jpg);
-  background-size: 130%;
-}
-.section-exercices__list .list__group .group__item-6 {
-  background-image: url(../img/exercices/chest-bg.jpg);
-  background-position: center 60%;
-  background-size: 160%;
-}
-.section-exercices__list .list__group .group__item-7 {
-  background-image: url(../img/exercices/legs-bg.jpg);
-  background-size: cover;
-  background-position: center 40%;
-}
-.section-exercices__list .list__group .list__upr {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  max-height: 0px;
-  overflow: hidden;
-  padding-top: 25px;
-  gap: 20px;
-  flex-wrap: wrap;
-  -webkit-transition: max-height 0.4s ease-out;
-  transition: max-height 0.4s ease-out;
-}
-.section-exercices__list .list__group .list__upr .upr__item {
+/* ------------------------------------------------------------------------------------------start */
+.section-start {
   background-color: #ffffff;
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
-  border-radius: 20px;
-}
-.section-exercices__list .list__group .list__upr .upr__item .item__link {
-  height: 100%;
-  width: 100%;
-  padding: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  padding-top: 100px;
 }
-.section-exercices__list .list__group .list__upr .upr__item .item__image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.section-exercices__list .list__group .list__upr .upr__item .item__image img {
-  max-width: 100%;
-  max-height: 250px;
-}
-.section-exercices__list .list__group .list__upr .upr__item .item__title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  text-align: center;
+.section-start__title {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 1.2;
+  padding-bottom: 1rem;
+  border-bottom: 1rem solid #d81c2b;
+  max-width: 52rem;
   color: #000000;
-  font-size: 40px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
-.section-exercices__list .list__group .list__upr.active {
-  -webkit-transition: max-height 0.4s ease-out;
-  transition: max-height 0.4s ease-out;
-}
-
-.popup {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  visibility: hidden;
-  overflow-y: auto;
-  overflow-x: hidden;
-  z-index: 100;
-}
-
-.popup.open {
-  opacity: 1;
-  visibility: visible;
-}
-
-.popup.open .popup__content {
-  -webkit-transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
-          transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
-  opacity: 1;
-}
-
-.popup__area {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-
-.popup__body {
-  min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 30px 10px;
-  -webkit-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
-}
-
-.popup__content {
-  background-color: #fff;
+.section-start__text {
+  line-height: 1.6;
+  font-size: 30px;
+  margin-bottom: 50px;
   color: #000000;
-  max-width: 70%;
-  padding: 30px;
-  position: relative;
-  -webkit-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
-  opacity: 0;
-  -webkit-transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
-          transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
-  border: 1px solid black;
-}
-.popup__content .popup__title {
-  font-size: 50px;
-  font-family: "Oswald";
-  margin-bottom: 20px;
-}
-.popup__content .popup__image img {
-  width: 100%;
-}
-.popup__content .popup__text {
-  font-size: 20px;
   font-weight: 400;
 }
-.popup__content .popup__text h3 {
-  font-size: 30px;
+.section-start__text h4 {
+  margin: 10px 0 20px;
+  font-size: 3rem;
 }
-.popup__content .popup__text span {
-  font-weight: bold;
-  margin-bottom: 10px;
+.section-start .steps {
+  margin-top: 30px;
+}
+.section-start .steps .steps__numbers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 1vw;
+}
+.section-start .steps .steps__numbers .numbers__item {
+  background-color: #d81c2b;
+  color: #ffffff;
+  border-radius: 5px;
+  width: 17%;
+  padding: 5px;
+  font-weight: 700;
+}
+.section-start .steps .steps__contents .contents__item {
+  padding: 50px 0;
+  display: none;
+}
+.section-start .steps .steps__contents .contents__item h3 {
+  text-align: center;
+}
+.section-start .steps .steps__contents .contents__item img {
+  width: 80%;
+  margin: 0 auto;
   display: block;
 }
-.popup__content .popup__text a {
-  margin: 20px 0;
-  font-size: 20px;
-  font-weight: bold;
-  display: block;
-  color: #0000FF;
+.section-start .steps .steps__contents .contents__item p {
+  display: inline;
 }
-.popup__content .popup__text a:hover {
+.section-start .steps .steps__contents .contents__item a {
   text-decoration: underline;
+  font-weight: 600;
+  color: #d81c2b;
 }
-.popup__content .popup__text ul li {
-  list-style: square;
-  margin-bottom: 10px;
-  margin-left: 10px;
-}
-.popup__content .popup__text iframe {
-  width: 100%;
-  height: 400px;
+.section-start .steps .steps__contents .contents__item.active {
+  display: block;
 }
 
-#chest-1 span {
-  margin-bottom: 0;
+/* ------------------------------------------------------------------------------------------ */
+.button-30 {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 4px;
+  border-width: 0;
+  -webkit-box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+          box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  cursor: pointer;
+  font-family: "JetBrains Mono", monospace;
+  min-height: 48px;
+  -webkit-transition: -webkit-box-shadow 0.15s, -webkit-transform 0.15s;
+  transition: -webkit-box-shadow 0.15s, -webkit-transform 0.15s;
+  transition: box-shadow 0.15s, transform 0.15s;
+  transition: box-shadow 0.15s, transform 0.15s, -webkit-box-shadow 0.15s, -webkit-transform 0.15s;
+  font-size: 18px;
 }
 
-.popup__close {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  font-size: 20px;
-  color: #000000;
+.button-30:focus {
+  -webkit-box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+          box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 }
 
-body.lock {
-  overflow: hidden;
+.button-30:hover {
+  -webkit-box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+          box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
+}
+
+.button-30:active {
+  -webkit-box-shadow: #D6D6E7 0 3px 7px inset;
+          box-shadow: #D6D6E7 0 3px 7px inset;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+.button-30.active {
+  -webkit-box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #720909 0 -4px 0 inset;
+          box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #720909 0 -4px 0 inset;
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
 }
